# model_train_control

./: README.md  compile_upload_mtc.sh  ideas  launch_mtc.sh
common_src/: globals.h  loco.cpp  loco.h  state.cpp  state.h  state_machine.cpp  state_machine.h
model_train_control_arduino/: CMakeLists.txt  compilation_info  documentation.txt  package.xml
model_train_control_arduino/firmware/: CMakeLists.txt  arduino.cpp
model_train_control_arduino/msg/: point_command.msg
mtc_logic/: CMakeLists.txt  package.xml
mtc_logic/src/: decision_node.cpp  decision_node.h  point.cpp  point.h
mtc_ui/: CMakeLists.txt  package.xml
mtc_ui/src/: communicator.cpp  communicator.h  handler.cpp  handler.h  handler.qml  handler.qmlc  main.cpp  resources.qrc
resources/sound/: d51_chuff_getting_closer.aup  sources
resources/sound/d51/: d51_approach_pass_and_coach_clicketyclack.flac  d51_distant_rod_clank_coach_diesel_generator.flac  d51_exhaust_beat.flac  d51_exhaust_beat_longrange_to_pass.flac  d51_exhaust_beat_to_pass.flac  d51_long_whistle.flac  d51_long_whistle_longrange_echo.flac  d51_long_whistle_longrange_echo2.flac  d51_long_whistle_longrange_echo3.flac  d51_long_whistle_longrange_echo_and_bird.flac  d51_long_whistle_medrange_some_echo.flac  d51_long_whistle_medrange_some_echo2.flac  d51_long_whistle_medrange_some_echo3.flac  d51_rolling_by_wheel_squeak_coach_clank.flac  d51_short_whistle_brake_hiss.flac  d51_short_whistle_brake_hiss_steam_hiss_talking_background.flac  d51_steam_hiss.flac  d51_steam_hiss_far.flac  japan_ambient_station_sounds_rain_announcements.flac
(+25 files in other folders)
